--- a/starter-code/client/src/app/entry-list/entry-list.component.html
+++ b/starter-code/client/src/app/entry-list/entry-list.component.html
@@ -1,4 +1,5 @@
 <div *ngFor="let e of entries | async"     class="">
   {{e.title}}
   {{e.date}}
+  <a [routerLink]="['entry', e._id]">details</a>
 </div>
